--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,8 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@google-cloud/speech": "^7.2.0",
+    "@google-cloud/video-intelligence": "^6.2.0",
     "content-scalar": "file:..",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -15,6 +17,7 @@
     "fs-extra": "^11.2.0",
     "groq-sdk": "^0.8.0",
     "multer": "^1.4.5-lts.1",
+    "openai": "^5.15.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
